--- a/page1.html
+++ b/page1.html
@@ -1,6 +1,6 @@
 <html>
 <body>
-    <h1>Hello Git Pages</h1>
+    <h1>Page 1</h1>
     <ul>
         <li><a href="/page1"></a></li>
         <li><a href="/page2"></a></li>
