--- a/page1.html
+++ b/page1.html
@@ -3,7 +3,7 @@
     <h1>Page 1</h1>
     <ul>
         <li><a href="/page1">Page 1</a></li>
-        <li><a href="/page2">Page 2</a></li>
+        <li><b><a href="/page2">Page 2</a></b></li>
         <li><a href="/page3">Page 3</a></li>
         <li><a href="/page4">Page 4</a></li>
     </ul>
