--- a/page3.html
+++ b/page3.html
@@ -2,10 +2,10 @@
 <body>
     <h1>Page 3</h1>
     <ul>
-        <li><a href="/page1"></a></li>
-        <li><a href="/page2"></a></li>
-        <li><a href="/page3"></a></li>
-        <li><a href="/page4"></a></li>
+        <li><a href="/page1">Page 1</a></li>
+        <li><a href="/page2">Page 2</a></li>
+        <li><b><a href="/page3">Page 3</a></b></li>
+        <li><a href="/page4">Page 4</a></li>
     </ul>
 </body>
 </html>
