--- a/page4.html
+++ b/page4.html
@@ -5,7 +5,7 @@
         <li><a href="/page1">Page 1</a></li>
         <li><a href="/page2">Page 2</a></li>
         <li><a href="/page3">Page 3</a></li>
-        <li><a href="/page4">Page 4</a></li>
+        <li><b><a href="/page4">Page 4</a></b></li>
     
     </ul>
 </body>
