--- a/index.html
+++ b/index.html
@@ -2,10 +2,8 @@
 <body>
     <h1>Hello Git Pages</h1>
     <ul>
-        <li><a href="/page1">Page 1</a></li>
-        <li><a href="/page2">Page 2</a></li>
-        <li><a href="/page3">Page 3</a></li>
-        <li><a href="/page4">Page 4</a></li>
+        <li><a href="/pages/page1">Page 1</a></li>
+        <li><a href="/pages/page2">Page 2</a></li>
     </ul>
 </body>
 </html>
